--- a/projects/tu-cita/src/index.html
+++ b/projects/tu-cita/src/index.html
@@ -12,8 +12,10 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwain61QoFL1-a8tkOCmHsJtAZPmJ2Yjg"
       type="text/javascript"
     ></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   </head>
-  <body>
+  <body class="mat-typography">
     <app-root></app-root>
   </body>
 </html>
